<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingVertical="16dp"
            android:paddingStart="18sp"
            android:text="@string/set"
            android:textColor="#112041"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_white_r20"
            android:orientation="vertical"
            android:paddingVertical="6dp"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btnPrivacy"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_weight="1"
                    android:text="@string/privacy_policy"
                    android:textColor="#112041"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    app:srcCompat="@drawable/ic_arrow_right_tiny" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:background="#F8F8F8" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btnUserAgreement"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_weight="1"
                    android:text="@string/user_agreement"
                    android:textColor="#112041"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    app:srcCompat="@drawable/ic_arrow_right_tiny" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>