<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="80dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            tools:listitem="@layout/item_guide_land" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:id="@+id/indicator1"
                android:layout_width="21dp"
                android:layout_height="5dp"
                android:background="@drawable/bg_00c5a8_r10" />

            <View
                android:id="@+id/indicator2"
                android:layout_width="21dp"
                android:layout_height="5dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/bg_f0f0f0_r10" />

            <View
                android:id="@+id/indicator3"
                android:layout_width="21dp"
                android:layout_height="5dp"
                android:background="@drawable/bg_f0f0f0_r10" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mainDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:gravity="center"
            android:text="@string/first_main_desc"
            android:textColor="#FF172646"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/secDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.1"
            android:text="@string/first_sec_desc"
            android:textColor="#FF818CA3"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainDesc" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="78dp"
            android:background="@drawable/btn_00c5a8_r12"
            android:gravity="center"
            android:paddingHorizontal="38dp"
            android:paddingVertical="11dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>