<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/bg_white_r16"
        android:elevation="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/itemBeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_beat_green" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:text="@string/text_normal"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/itemBeat"
            app:layout_constraintTop_toTopOf="@+id/itemBeat" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#9B9B9B"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/itemState"
            app:layout_constraintTop_toBottomOf="@+id/itemState"
            tools:text="2023" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/itemEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/ic_edit" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemSys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/sys"
            android:textColor="#9B9B9B"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemSysValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/itemSys"
            app:layout_constraintStart_toEndOf="@+id/itemSys"
            app:layout_constraintTop_toTopOf="@+id/itemSys"
            tools:text="119" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemDia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/dia"
            android:textColor="#9B9B9B"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/itemSysValue" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/itemDiaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/itemDia"
            app:layout_constraintStart_toEndOf="@+id/itemDia"
            app:layout_constraintTop_toTopOf="@+id/itemDia"
            tools:text="79" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>